removed all dependencies of IStore on interpreted values. There is still a dependency on Context in order to build queries, but the query object is now populated from the predicate expressions with storable data. Eventually, that data will be produced by compiled code.